--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.0",
+    "chartkick": "^5.0.1",
     "esbuild": "^0.16.12",
     "sass": "^1.57.1"
   },
